FIX : post cell interaction button spacing

--- a/src/components/postCell/postCell.module.scss
+++ b/src/components/postCell/postCell.module.scss
@@ -104,7 +104,7 @@ $borderWidth: 3px;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 20px;
     font-weight: bold;
     * {
         color: $colorBlue;
